# SUDA-SE-lessons

./: .gitignore  LICENSE  README.md
00041008 英语高级口语/课堂笔记/: 第一课
COMS1012 Python程序设计/: README.md
COMS1012 Python程序设计/考试资料/: 2022-Python程序设计-期末试卷.docx  README.md  sample.py
COMS1012 Python程序设计/课程作业/: README.md
COMS1012 Python程序设计/课程讲义/: README.md
COMS2008 操作系统原理/: README.md
COMS2008 操作系统原理/实验/: README.md
COMS2008 操作系统原理/实验/2022-11-04 实验四/src/: CMakeLists.txt  README.md  common.h  main.c  player_a.c  player_b.c  referee.c
COMS2008 操作系统原理/考试资料/: 2022-操作系统原理-期末试卷.docx
COMS2008 操作系统原理/课程作业/: README.md
COMS2008 操作系统原理/课程讲义/: README.md  ch01 导论.pptx  ch03 进程.pptx  ch04 线程.pptx  ch05 CPU调度.pptx  ch06 进程同步.pptx
COMS2022 离散数学/: README.md
COMS2022 离散数学/离散数学题库/: 离散01.doc  离散02.doc  离散03.doc  离散04.doc  离散05.doc  离散06.doc  离散07.doc  离散08.doc  离散09.doc  离散10.doc  离散11-20.doc  离散数学00.doc  离散数学01.doc  离散数学02.doc  离散数学03.doc  离散数学04.doc  离散数学05.doc  (+15 more)
COMS2037 数据库原理与设计/: README.md
COMS2038 数据库课程实践/: README.md
COMS2045 自然语言处理（选修）/: README.md
COMS2045 自然语言处理（选修）/课程设计/fastapi-ner-app/: README.md  pyproject.toml
COMS2045 自然语言处理（选修）/课程设计/fastapi-ner-app/fastapi_ner_app/: config.py  main.py
COMS2045 自然语言处理（选修）/课程设计/fastapi-ner-app/fastapi_ner_app/model/: LSTM_CRF.py  model_scripted.pt
COMS2045 自然语言处理（选修）/课程设计/fastapi-ner-app/fastapi_ner_app/routers/: predict.py
COMS2045 自然语言处理（选修）/课程设计/fastapi-ner-app/output/: id2tag.csv  id2word.csv  tag2id.csv  word2id.csv
COMS2045 自然语言处理（选修）/课程设计/svelte-ner-client/src-tauri/: Cargo.toml  tauri.conf.json
COMS2045 自然语言处理（选修）/课程设计/svelte-ner-client/src-tauri/src/: main.rs
COMS2058 工程经济与伦理/: README.md
COMS3006 算法设计与分析（选修）/: README.md
COMS3040 信息检索综合实践/: README.md
NTEN2025 计算机网络/: README.md
SOEN1013 软件工程概论/: README.md
SOEN2006 软件项目管理/: README.md  ~$可行性分析报告.docx
SOEN2008 计算机硬件基础/: README.md  硬件基础实验AHL-GEC-CH573-V1.2-20240828.docx
SOEN2009 软件系统分析与设计/: README.md
SOEN2010 软件系统分析与设计课程实践/: README.md
SOEN2011 软件测试与质量保证/: README.md
SOEN2012 软件测试与质量保证课程实践/: README.md
SOEN2014 综合项目实践/: README.md
SOEN2015 软件需求工程/: README.md
SOEN2016 软件体系结构（选修）/: README.md
SOEN2017 物联网技术及应用/: README.md
SOEN2017 物联网技术及应用（选修）/: README.md
SOEN2019 Web应用开发（选修）/: README.md
SOEN2028 程序设计课程实践/: README.md
SOEN2029 数据结构/: README.md
SOEN2030 数据结构课程实践/: README.md
SOEN2031 面向对象与Java程序设计/: README.md
SOEN3014 工程项目实践（卓越工程师型）/: README.md
选修课/: 苏州大学选修课避雷指南.xlsx
马克思原理/: 马原拿A秘籍-思维导图-更多信息.puml
(+4105 files in other folders)
